# docs/swagger.json
@@ -491,6 +491,44 @@
                 }
             }
         },
+        "/order/set-status": {
+            "patch": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "order"
+                ],
+                "summary": "Change order status",
+                "parameters": [
+                    {
+                        "description": "style to website",
+                        "name": "input",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/order.UpdateStatusRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/response.Response"
+                        }
+                    }
+                }
+            }
+        },
         "/product/create": {
             "post": {
                 "security": [
@@ -921,6 +959,17 @@
                 }
             }
         },
+        "order.UpdateStatusRequest": {
+            "type": "object",
+            "properties": {
+                "order_id": {
+                    "type": "integer"
+                },
+                "status": {
+                    "type": "integer"
+                }
+            }
+        },
         "product.CreateRequest": {
             "type": "object",
             "properties": {
@@ -1051,6 +1100,9 @@
                     "items": {
                         "$ref": "#/definitions/storage.OrderItem"
                     }
+                },
+                "status": {
+                    "type": "integer"
                 }
             }
         },
